--- a/korganizer.desktop
+++ b/korganizer.desktop
@@ -2,6 +2,7 @@
 MimeType=text/calendar;
 Comment=Calendar and Scheduling Program
 Comment[af]=Kalender en Skedulering Program
+Comment[ar]=برنامج التقويم والجدولة
 Comment[bg]=Програма за календар и разписание
 Comment[ca]=Un programa de calendari i planificació
 Comment[cs]=Kalendářový a plánovací program
@@ -66,6 +67,7 @@ X-DocPath=korganizer/index.html
 Type=Application
 Name=KOrganizer
 Name[af]=Korganizer
+Name[ar]=برنامج المنظَم KOrganizer
 Name[bg]=KOrganizer
 Name[br]=KOrganizer
 Name[ca]=KOrganizer
@@ -124,6 +126,7 @@ Name[zh_CN]=KOrganizer
 Name[zh_TW]=KOrganizer 行事曆
 GenericName=Personal Organizer
 GenericName[af]=Persoonlike Organiseerder
+GenericName[ar]=المنظم الشخصي
 GenericName[bg]=Организатор
 GenericName[ca]=Organitzador personal
 GenericName[cs]=Osobní organizér
