--- a/plugins/thisdayinhistory/thisdayinhistory.desktop
+++ b/plugins/thisdayinhistory/thisdayinhistory.desktop
@@ -1,6 +1,7 @@
 [Desktop Entry]
 X-KDE-Library=korg_thisdayinhistory
 Name=Wikipedia 'This Day in History' Plugin
+Name[ar]=ملحق 'هذا اليوم في التاريخ' في الويكيبيديا
 Name[ca]=Connector d'imatge del dia de la Viquipèdia
 Name[cs]=Wikipedia modul 'Tento den v historii'
 Name[da]=Wikipedias 'denne dag i historien'-plugin
@@ -37,6 +38,7 @@ Name[x-test]=xxWikipedia 'This Day in History' Pluginxx
 Name[zh_CN]=Wikipedia “历史上的今天” 插件
 Name[zh_TW]=維基百科「歷史上的今天」外掛程式
 Comment=This plugin provides links to Wikipedia's 'This Day in History' pages
+Comment[ar]=هذا الملحق يوفر وصلات لصفحات 'هذا اليوم في التاريخ' من الويكيبيديا
 Comment[ca]=Aquest connector proporciona els enllaços a les pàgines d'Efemèrides de la Viquipèdia
 Comment[da]=Dette plugin viser links til Wikipedias 'denne dag i historien'-sider
 Comment[de]=Dieses Modul stellt eine Verknüpfung auf „Dieser Tag in der Geschichte“ in Wikipedia zur Verfügung.
