--- a/kcmconfigs/korganizer_configdesignerfields.desktop
+++ b/kcmconfigs/korganizer_configdesignerfields.desktop
@@ -14,6 +14,7 @@ X-KDE-Weight=800
 
 Name=Custom Pages
 Name[af]=Pasmaak Blaaie
+Name[ar]=صفحات مخصصة
 Name[bg]=Потребителски полета
 Name[br]=Pajennoù dre ziouer
 Name[ca]=Pàgines a mida
@@ -70,6 +71,7 @@ Name[zh_CN]=定制页
 Name[zh_TW]=Custom Pages
 Comment=Configure the Custom Pages
 Comment[af]=Stel die pasmaak blaaie op
+Comment[ar]=اضبط مخصص الصفحات
 Comment[bg]=Настройки на потребителските полета
 Comment[br]=Kefluniañ ar pajennoù diouzhoc'h
 Comment[ca]=Configura les pàgines a mida
