--- a/kcmconfigs/korganizer_configfreebusy.desktop
+++ b/kcmconfigs/korganizer_configfreebusy.desktop
@@ -14,6 +14,7 @@ X-KDE-Weight=600
 
 Name=Free/Busy
 Name[af]=Beskikbaar/Besig
+Name[ar]=متفرّغ/مشغول
 Name[bg]=Свободно/заето
 Name[ca]=Lliure/ocupat
 Name[cs]=Aktivita
@@ -71,6 +72,7 @@ Name[zh_CN]=空闲/忙碌
 Name[zh_TW]=行程資訊
 Comment=KOrganizer Free/Busy Configuration
 Comment[af]=KOrganizer Beskikbaar/Besig opstelling
+Comment[ar]=إعداد متفرّغ/مشغول لبرنامج المنظم 
 Comment[bg]=Настройки на свободно/заето за KOrganizer
 Comment[ca]=Configuració de Lliure/ocupat per a KOrganizer
 Comment[cs]=Nastavení aktivity pro KOrganizer
