--- a/kcmconfigs/korganizer_configgroupscheduling.desktop
+++ b/kcmconfigs/korganizer_configgroupscheduling.desktop
@@ -14,6 +14,7 @@ X-KDE-Weight=500
 
 Name=Group Scheduling
 Name[af]=Groep Skedulering
+Name[ar]=مجموعة الجدولة
 Name[bg]=Разписание
 Name[ca]=Planificació de grups
 Name[cs]=Skupinové plánování
@@ -67,6 +68,7 @@ Name[zh_CN]=组日程安排
 Name[zh_TW]=群組排程
 Comment=KOrganizer Group Scheduling Configuration
 Comment[af]=KOrganizer groep skedulering opstelling
+Comment[ar]=إعدادات مجموعة الجدولة لبرنامج المنظم
 Comment[bg]=Настройки на разписание за KOrganizer
 Comment[ca]=Configuració de la planificació de grups a KOrganizer
 Comment[cs]=Nastavení skupinového plánování KOrganizeru
