--- a/kcmconfigs/korganizer_configmain.desktop
+++ b/kcmconfigs/korganizer_configmain.desktop
@@ -14,6 +14,7 @@ X-KDE-Weight=100
 
 Name=General
 Name[af]=Algemeen
+Name[ar]=عام
 Name[be]=Агульныя
 Name[bg]=Общи
 Name[br]=Pennañ
@@ -74,6 +75,7 @@ Name[zh_CN]=常规
 Name[zh_TW]=General
 Comment=KOrganizer Main Configuration
 Comment[af]=KOrganizer hoof opstelling
+Comment[ar]=اعدادات برنامج المنظم الرئيسية
 Comment[bg]=Главни настройки за KOrganizer
 Comment[br]=Kefluniadur kentañ KOrganizer
 Comment[ca]=Configuració principal a KOrganizer
