--- a/kcmconfigs/korganizer_configviews.desktop
+++ b/kcmconfigs/korganizer_configviews.desktop
@@ -14,6 +14,7 @@ X-KDE-Weight=300
 
 Name=Views
 Name[af]=Aansigte
+Name[ar]=العرض
 Name[bg]=Изгледи
 Name[br]=Gweloù
 Name[ca]=Vistes
@@ -74,6 +75,7 @@ Name[zh_CN]=视图
 Name[zh_TW]=檢視
 Comment=KOrganizer View Configuration
 Comment[af]=KOrganizer aansig opstelling
+Comment[ar]=ضبط عرض برنامج المنظم
 Comment[bg]=Настройки на изгледи за KOrganizer
 Comment[ca]=Configuració de la vista a KOrganizer
 Comment[cs]=Nastavení pohledů KOrganizeru
