--- a/plugins/datenums/datenums.desktop
+++ b/plugins/datenums/datenums.desktop
@@ -2,6 +2,7 @@
 X-KDE-Library=korg_datenums
 Name=Date Numbers Plugin for Calendars
 Name[af]=Dag nommer inprop module vir kalenders
+Name[ar]=ملحق ارقام التاريخ للتقاويم
 Name[bg]=Приставка на календара за дати и смятане с дати
 Name[ca]=Connector de números de data per als calendaris
 Name[cs]=Modul pro očíslování dat v kalendáři
@@ -52,6 +53,7 @@ Name[zh_CN]=日历的日期数字插件
 Name[zh_TW]=行事曆日期數字外掛程式
 Comment=For each day this plugin shows its daynumber of the year at the top of the agenda view. For example, February 1 is day 32 of the year.
 Comment[af]=Die inprop module vertoon die dag nommer van die jaar bo aan die agenda aansig. Bv: 1 Februarie is dag 32 van die jaar.
+Comment[ar]=ﻷي يوم هذا الملحق يعرض رقم اليوم من السنة في أعلى مستعرض جدول الأعمال. مثال ، 1 فبراير يكون اليوم 32 من السنة .
 Comment[bg]=Приставката служи за показване на деня от началото на годината. Примерно, 1-ви февруари е 32-ия ден от годината.
 Comment[ca]=Per cada dia, aquest connector mostra el número de dia de l'any al capdamunt de la vista d'agenda. Per exemple, 1 de Febrer és el dia 32 de l'any.
 Comment[cs]=tento modul pro každý den zobrazuje pořadí dne v roce na vrcholu pohledu. Např. 1. únor je 32 druhý den v roce.
