--- a/dbuscalendar.desktop
+++ b/dbuscalendar.desktop
@@ -41,6 +41,7 @@ Type=ServiceType
 X-KDE-ServiceType=DBUS/Organizer
 Comment=Organizer with a D-Bus interface
 Comment[ar]=برنامج المنظم مع واجهة D-Bus
+Comment[ca]=Organitzador amb una interfície D-Bus
 Comment[cs]=Organizátor s D-BUS rozhraním
 Comment[da]=Planlægningskalender med en D-BUS-grænseflade
 Comment[de]=Organizer mit D-Bus-Schnittstelle
