SVN_SILENT made messages (.desktop file)
svn path=/trunk/KDE/kdepim/examples/mailreader/; revision=1061910

--- a/interfaces/calendar/calendardecoration.desktop
+++ b/interfaces/calendar/calendardecoration.desktop
@@ -92,7 +92,7 @@ Comment[sv]=Insticksprogram för kalenderdekoration
 Comment[ta]=நாள்காட்டி அலங்கார சொருகுப்பொருள்
 Comment[tg]=Модул барои ороиш додани тақвимот
 Comment[tr]=Takvim Dekorasyon Eklentisi
-Comment[uk]=Втулок прикрас календаря
+Comment[uk]=Додаток прикрас календаря
 Comment[vi]=Plugin phối trí lịch 
 Comment[xh]=Ikhalenda Yohombiso lwe Plugin
 Comment[x-test]=xxCalendar Decoration Pluginxx
