--- a/interfaces/calendar/calendarplugin.desktop
+++ b/interfaces/calendar/calendarplugin.desktop
@@ -32,7 +32,7 @@ Name[ru]=Модуль календаря
 Name[sl]=Vmesnik za koledarske vstavke
 Name[sv]=Insticksprogram för kalendergränssnitt
 Name[tr]=Takvim Eklentisi Arayüzü
-Name[uk]=Інтерфейс втулка календаря
+Name[uk]=Інтерфейс додатка календаря
 Name[x-test]=xxCalendar Plugin Interfacexx
 Name[zh_CN]=日历插件界面
 Name[zh_TW]=行事曆外掛程式介面
@@ -92,7 +92,7 @@ Comment[sv]=Insticksprogram för kalender
 Comment[ta]=நாள்காட்டி சொருகுப்பொருள்
 Comment[tg]=Модул барои тақвимот
 Comment[tr]=Takvim Eklentisi
-Comment[uk]=Втулок календаря
+Comment[uk]=Додаток календаря
 Comment[uz]=Kalendar plagini
 Comment[uz@cyrillic]=Календар плагини
 Comment[vi]=Plugin lịch
