--- a/interfaces/korganizer/korgprintplugin.desktop
+++ b/interfaces/korganizer/korgprintplugin.desktop
@@ -31,7 +31,7 @@ Name[ru]=Печать календаря
 Name[sl]=KOrganizerjev vmesnik za tiskalniške vstavke
 Name[sv]=Insticksprogram för Korganizers utskriftsgränssnitt
 Name[tr]=KOrganizer Yazdırma Eklentisi Arayüzü
-Name[uk]=Інтерфейс втулка друку KOrganizer
+Name[uk]=Інтерфейс додатка друку KOrganizer
 Name[x-test]=xxKOrganizer Print Plugin Interfacexx
 Name[zh_CN]=KOrganizer 打印插件界面
 Name[zh_TW]=KOrganizer 列印外掛程式介面
