--- a/plugins/hebrew/hebrew.desktop
+++ b/plugins/hebrew/hebrew.desktop
@@ -49,7 +49,7 @@ Name[sv]=Insticksprogram för judisk kalender
 Name[ta]=ஜூவிஷ் நாள்காட்டி சொருகுப்பொருள்
 Name[tg]=Тақвимоти яҳудӣ
 Name[tr]=İbrani Takvimi Eklentisi
-Name[uk]=Втулок єврейського календаря
+Name[uk]=Додаток єврейського календаря
 Name[x-test]=xxJewish Calendar Pluginxx
 Name[zh_CN]=犹太教日历插件
 Name[zh_TW]=猶太行事曆外掛程式
