--- a/plugins/picoftheday/picoftheday.desktop
+++ b/plugins/picoftheday/picoftheday.desktop
@@ -35,7 +35,7 @@ Name[ru]=Изображение дня с Wikipedia для календаря
 Name[sl]=Vstavek za Wikipedijin »Slika dneva« za koledarje
 Name[sv]=Insticksprogram för kalendrar med 'Dagens bild' från Wikipedia
 Name[tr]=Takvimler için Wikipedia Günün Resmi Eklentisi
-Name[uk]=Втулка дат для календарів (зображення дня з Wikipedia)
+Name[uk]=Додаток дат для календарів (зображення дня з Вікіпедії)
 Name[x-test]=xxWikipedia Picture Of the Day Plugin for Calendarsxx
 Name[zh_CN]=日历的每日 Wikipedia 贴图插件
 Name[zh_TW]=行事曆維基「本日圖片」外掛程式
