--- a/plugins/thisdayinhistory/thisdayinhistory.desktop
+++ b/plugins/thisdayinhistory/thisdayinhistory.desktop
@@ -33,7 +33,7 @@ Name[ru]=Показ блока «В этот день» с Wikipedia
 Name[sl]=Vstavek za Wikipedijin »Na današnji dan«
 Name[sv]=Insticksprogram med 'Den här dagen i historien' från Wikipedia
 Name[tr]=Wikipedia 'Tarihte Bugün' Eklentisi
-Name[uk]=Втулка Вікіпедії «Цей день в історії»
+Name[uk]=Додаток сторінки Вікіпедії «Цей день в історії»
 Name[x-test]=xxWikipedia 'This Day in History' Pluginxx
 Name[zh_CN]=Wikipedia “历史上的今天” 插件
 Name[zh_TW]=維基百科「歷史上的今天」外掛程式
