--- a/kcmconfigs/korganizer_configplugins.desktop
+++ b/kcmconfigs/korganizer_configplugins.desktop
@@ -65,7 +65,7 @@ Name[sv]=Insticksprogram
 Name[ta]=சொருகுப்பொருள்கள்
 Name[th]=โปรแกรมเสริม
 Name[tr]=Eklentiler
-Name[uk]=Втулки
+Name[uk]=Додатки
 Name[uz]=Plaginlar
 Name[uz@cyrillic]=Плагинлар
 Name[x-test]=xxPluginsxx
@@ -121,7 +121,7 @@ Comment[sl]=Nastavitve vstavka KOrganizerja
 Comment[sv]=Korganizers inställning av insticksprogram
 Comment[ta]=கேஅமைப்பாளர் சொருகுப்பொருள் வடிவமைப்பு
 Comment[tr]=KOrganizer Eklenti Yapılandırması
-Comment[uk]=Втулок налаштування KOrganizer
+Comment[uk]=Налаштування додатків KOrganizer
 Comment[x-test]=xxKOrganizer Plugin Configurationxx
 Comment[zh_CN]=KOrganizer 插件配置
 Comment[zh_TW]=KOrganizer外掛程式設定
