--- a/plugins/datenums/datenums.desktop
+++ b/plugins/datenums/datenums.desktop
@@ -47,7 +47,7 @@ Name[sv]=Datuminsticksprogram för kalendrar
 Name[ta]=நாள்காட்டிகளுக்கான தேதி எண்களின் சொருகுப்பொருள்
 Name[tg]=Санаҳои тақвим
 Name[tr]=Takvimler için Tarih Rakamları Eklentisi
-Name[uk]=Втулок дат для календарів
+Name[uk]=Додаток дат для календарів
 Name[x-test]=xxDate Numbers Plugin for Calendarsxx
 Name[zh_CN]=日历的日期数字插件
 Name[zh_TW]=行事曆日期數字外掛程式
@@ -92,7 +92,7 @@ Comment[sl]=Za vsak dan ta vstavek prikazuje številko dneva v letu na vrhu prai
 Comment[sv]=Insticksprogrammet visar dagens nummer under året för varje dag längst upp i agendavyn. Till exempel är 1:a februari den 32:e dagen under året.
 Comment[ta]=ஒவ்வோரு நாளும் நிகழ்ச்சி நிரல் காட்சியின் மேற்புறத்தில் வருடத்தின் நாளின் எண்ணை இந்த சொருகுப்பொருள் காட்டுகிறது. உதாரணமாக, பிப்ரவரி 1 வருடத்தின் 32வது நாள்
 Comment[tr]=Bu eklenti, her gün için tarih bilgisini gün sayısı olarak ajanda görünümünün yukarısında gösterir. Örneğin, 1 Şubat yılın 32. günüdür.
-Comment[uk]=Цей втулок показує зверху перегляду щоденника номер для кожного дня року. Наприклад, 1-го лютого - це 32 день року.
+Comment[uk]=Цей додаток показує зверху перегляду щоденника номер для кожного дня року. Наприклад, 1-го лютого — це 32 день року.
 Comment[x-test]=xxFor each day this plugin shows its daynumber of the year at the top of the agenda view. For example, February 1 is day 32 of the year.xx
 Comment[zh_CN]=此插件可对每天在议事日程视图中上方显示该日在一年中的序号。例如，2月1日是一年的第32天。
 Comment[zh_TW]=對每一天，此外掛程式會顯示這是一年中的第幾天。
