--- a/plugins/printing/list/listprint.desktop
+++ b/plugins/printing/list/listprint.desktop
@@ -92,7 +92,7 @@ Comment[sl]=Ta vstavek vam omogoča natis dogodkov in čakajočih opravil v obli
 Comment[sv]=Det här insticksprogrammet gör att du kan skriva ut händelser och uppgifter i en lista.
 Comment[ta]=இந்த சொருகுப்பொருள் பட்டியல் படிவத்தில் உள்ள செய்திகள் மற்றும் செய்யவேண்டியவைகளை அச்சிட உங்களை அனுமதிக்கிறது.
 Comment[tr]=Bu eklenti, olayları ve yapılacaklar listesini bir liste biçiminde yazdırmanızı sağlar.
-Comment[uk]=Цей втулок дозволяє друкувати події і завдання у вигляді списку.
+Comment[uk]=Цей додаток надає змогу друкувати список подій і завдань.
 Comment[x-test]=xxThis plugin allows you to print out events and to-dos in list form.xx
 Comment[zh_CN]=此插件允许您以列表格式打印事件和待办事宜。
 Comment[zh_TW]=此外掛程式允許您以清單格式印出事件與待辦事項。
