--- a/plugins/printing/whatsnext/whatsnextprint.desktop
+++ b/plugins/printing/whatsnext/whatsnextprint.desktop
@@ -93,7 +93,7 @@ Comment[sl]=Ta vstavek vam omogoča natis seznama vseh prihodnjih dogodkov in č
 Comment[sv]=Det här insticksprogrammet gör att du kan skriva ut en lista med alla kommande händelser och uppgifter.
 Comment[ta]=இந்த சொருகுப்பொருள் ஒரு வரப்போகும் நிகழ்வுகளின் பட்டியல் மற்றும் செய்யவேண்டியவைகளை அச்சிட உங்களை அனுமதிக்கிறது.
 Comment[tr]=Bu eklenti, sıradaki olayları ve yapılacaklar listesini bir liste biçiminde yazdırmanızı sağlar.
-Comment[uk]=Цей втулок дозволяє друкувати список всіх майбутніх подій та завдань.
+Comment[uk]=Цей додаток надає змогу друкувати список всіх майбутніх подій та завдань.
 Comment[x-test]=xxThis plugin allows you to print out a list of all upcoming events and to-dos.xx
 Comment[zh_CN]=此插件允许您打印所有即将到达的事件和代办事宜。
 Comment[zh_TW]=此外掛程式允許您印出即將發生的事件與待辦事項清單。
