open korganizer documentation from configuration dialog pages CCBUG:147070
svn path=/trunk/KDE/kdepim/; revision=1063196

--- a/kcmconfigs/korganizer_configdesignerfields.desktop
+++ b/kcmconfigs/korganizer_configdesignerfields.desktop
@@ -11,6 +11,7 @@ X-KDE-ParentApp=kaddressbook
 X-KDE-ParentComponents=korganizer,kontact_korganizerplugin
 X-KDE-CfgDlgHierarchy=KOrganizer
 X-KDE-Weight=800
+X-DocPath=korganizer/index.html#config
 
 Name=Custom Pages
 Name[af]=Pasmaak Blaaie
