--- a/kcmconfigs/korganizer_configfreebusy.desktop
+++ b/kcmconfigs/korganizer_configfreebusy.desktop
@@ -11,6 +11,7 @@ X-KDE-ParentApp=korganizer
 X-KDE-ParentComponents=korganizer,kontact_korganizerplugin
 X-KDE-CfgDlgHierarchy=KOrganizer
 X-KDE-Weight=600
+X-DocPath=korganizer/index.html#config-main-free-busy
 
 Name=Free/Busy
 Name[af]=Beskikbaar/Besig
