--- a/kcmconfigs/korganizer_configgroupscheduling.desktop
+++ b/kcmconfigs/korganizer_configgroupscheduling.desktop
@@ -11,6 +11,7 @@ X-KDE-ParentApp=korganizer
 X-KDE-ParentComponents=korganizer,kontact_korganizerplugin
 X-KDE-CfgDlgHierarchy=KOrganizer
 X-KDE-Weight=500
+X-DocPath=korganizer/index.html#config-main-groupscheduling
 
 Name=Group Scheduling
 Name[af]=Groep Skedulering
