--- a/kcmconfigs/korganizer_configtime.desktop
+++ b/kcmconfigs/korganizer_configtime.desktop
@@ -11,6 +11,7 @@ X-KDE-ParentApp=korganizer
 X-KDE-ParentComponents=korganizer,kontact_korganizerplugin
 X-KDE-CfgDlgHierarchy=KOrganizer
 X-KDE-Weight=200
+X-DocPath=korganizer/index.html#config-main-time-and-date
 
 Name=Time and Date
 Name[ar]=الوقت و التاريخ
