SVN_SILENT made messages (.desktop file)
svn path=/trunk/KDE/kdepim/; revision=1067701

--- a/plugins/printing/whatsnext/whatsnextprint.desktop
+++ b/plugins/printing/whatsnext/whatsnextprint.desktop
@@ -46,7 +46,7 @@ Name[sl]=Slog tiskanja v obliki »Kaj je naslednje«
 Name[sv]=Vad står på tur-utskriftsstil
 Name[ta]=அடுத்டு என்ன அச்சுப் பாணி
 Name[tr]=Sıradaki Nedir Yazdırma Tarzı
-Name[uk]=Стиль друку "Що далі?"
+Name[uk]=Стиль друку «Що далі?»
 Name[x-test]=xxWhat's Next Print Stylexx
 Name[zh_CN]=下步安排打印样式
 Name[zh_TW]=「下一個是什麼」列印風格
