SVN_SILENT made messages (.desktop file)
svn path=/trunk/KDE/kdepim/examples/mailreader/; revision=1068120

--- a/dbuscalendar.desktop
+++ b/dbuscalendar.desktop
@@ -66,6 +66,7 @@ Comment[pt]=Organizador com uma interface de D-Bus
 Comment[pt_BR]=Organizador com interface D-Bus
 Comment[ro]=Organizator cu interfață D-Bus
 Comment[ru]=Органайзер с интерфейсом D-Bus
+Comment[sl]=Organizator z vmesnikom D-Bus
 Comment[sv]=Filofax med D-Bus gränssnitt
 Comment[tr]=D-BUS arayüzü kullanan Düzenleyici
 Comment[uk]=Тижневик з інтерфейсом D-Bus
