--- a/kcmconfigs/korganizer_configdesignerfields.desktop
+++ b/kcmconfigs/korganizer_configdesignerfields.desktop
@@ -19,6 +19,7 @@ Name[ar]=صفحات مخصصة
 Name[bg]=Потребителски полета
 Name[br]=Pajennoù dre ziouer
 Name[ca]=Pàgines a mida
+Name[ca@valencia]=Pàgines a mida
 Name[cs]=Vlastní stránky
 Name[da]=Brugervalgte sider
 Name[de]=Benutzerdefinierte Seiten
@@ -76,6 +77,7 @@ Comment[ar]=اضبط مخصص الصفحات
 Comment[bg]=Настройки на потребителските полета
 Comment[br]=Kefluniañ ar pajennoù diouzhoc'h
 Comment[ca]=Configura les pàgines a mida
+Comment[ca@valencia]=Configura les pàgines a mida
 Comment[cs]=Nastavení vlastních stránek
 Comment[da]=Indstil de selvvalgte sider
 Comment[de]=Einstellungen für benutzerdefinierte Seiten
