--- a/kcmconfigs/korganizer_configfreebusy.desktop
+++ b/kcmconfigs/korganizer_configfreebusy.desktop
@@ -18,6 +18,7 @@ Name[af]=Beskikbaar/Besig
 Name[ar]=متفرّغ/مشغول
 Name[bg]=Свободно/заето
 Name[ca]=Lliure/ocupat
+Name[ca@valencia]=Lliure/ocupat
 Name[cs]=Aktivita
 Name[cy]=Rhydd/Prysur
 Name[da]=Ledig/optaget
@@ -76,6 +77,7 @@ Comment[af]=KOrganizer Beskikbaar/Besig opstelling
 Comment[ar]=إعداد متفرّغ/مشغول لبرنامج المنظم 
 Comment[bg]=Настройки на свободно/заето за KOrganizer
 Comment[ca]=Configuració de Lliure/ocupat per a KOrganizer
+Comment[ca@valencia]=Configuració de Lliure/ocupat per a KOrganizer
 Comment[cs]=Nastavení aktivity pro KOrganizer
 Comment[cy]=Ffurfweddiad Rhydd/Prysur KTrefnydd
 Comment[da]=KOrganizer indstilling af ledig/optaget
