--- a/kcmconfigs/korganizer_configgroupscheduling.desktop
+++ b/kcmconfigs/korganizer_configgroupscheduling.desktop
@@ -18,6 +18,7 @@ Name[af]=Groep Skedulering
 Name[ar]=مجموعة الجدولة
 Name[bg]=Разписание
 Name[ca]=Planificació de grups
+Name[ca@valencia]=Planificació de grups
 Name[cs]=Skupinové plánování
 Name[cy]=Trefnlennu Grŵp
 Name[da]=Gruppeskemalægning
@@ -72,6 +73,7 @@ Comment[af]=KOrganizer groep skedulering opstelling
 Comment[ar]=إعدادات مجموعة الجدولة لبرنامج المنظم
 Comment[bg]=Настройки на разписание за KOrganizer
 Comment[ca]=Configuració de la planificació de grups a KOrganizer
+Comment[ca@valencia]=Configuració de la planificació de grups a KOrganizer
 Comment[cs]=Nastavení skupinového plánování KOrganizeru
 Comment[cy]=Ffurfweddiad Trefnlennu Grŵp KTrefnydd
 Comment[da]=KOrganizer gruppeskemalægning indstilling
