--- a/kcmconfigs/korganizer_configmain.desktop
+++ b/kcmconfigs/korganizer_configmain.desktop
@@ -20,6 +20,7 @@ Name[be]=Агульныя
 Name[bg]=Общи
 Name[br]=Pennañ
 Name[ca]=General
+Name[ca@valencia]=General
 Name[cs]=Obecné
 Name[cy]=Cyffredinol
 Name[da]=Generelt
@@ -80,6 +81,7 @@ Comment[ar]=اعدادات برنامج المنظم الرئيسية
 Comment[bg]=Главни настройки за KOrganizer
 Comment[br]=Kefluniadur kentañ KOrganizer
 Comment[ca]=Configuració principal a KOrganizer
+Comment[ca@valencia]=Configuració principal a KOrganizer
 Comment[cs]=Hlavní nastavení KOrganizeru
 Comment[cy]=Prif Ffurfweddiad KTrefnydd
 Comment[da]=KOrganizer hovedindstilling
