--- a/kcmconfigs/korganizer_configviews.desktop
+++ b/kcmconfigs/korganizer_configviews.desktop
@@ -19,6 +19,7 @@ Name[ar]=العرض
 Name[bg]=Изгледи
 Name[br]=Gweloù
 Name[ca]=Vistes
+Name[ca@valencia]=Vistes
 Name[cs]=Pohledy
 Name[cy]=Golygon
 Name[da]=Visninger
@@ -79,6 +80,7 @@ Comment[af]=KOrganizer aansig opstelling
 Comment[ar]=ضبط عرض برنامج المنظم
 Comment[bg]=Настройки на изгледи за KOrganizer
 Comment[ca]=Configuració de la vista a KOrganizer
+Comment[ca@valencia]=Configuració de la vista a KOrganizer
 Comment[cs]=Nastavení pohledů KOrganizeru
 Comment[cy]=Ffurfweddiad Golygon KTrefnydd
 Comment[da]=KOrganizer visningsindstilling
