--- a/korgac/korgac.desktop
+++ b/korgac/korgac.desktop
@@ -5,6 +5,7 @@ Name[af]=KOrganizer herhinner kliënt
 Name[ar]=عميل رسائل التذكير لبرنامج المنظم
 Name[bg]=Клиент за аларма на KOrganizer
 Name[ca]=Client de l'alarma de KOrganizer
+Name[ca@valencia]=Client de l'alarma de KOrganizer
 Name[cs]=Klient upomínek KOrganizeru
 Name[da]=KOrganizer-påmindelsesklient
 Name[de]=KOrganizer Erinnerungsfunktion
@@ -57,6 +58,7 @@ GenericName[af]=Korganizer herhinner bediener kliënt
 GenericName[ar]=عميل مراقب رسائل تذكير المنظم
 GenericName[bg]=Клиент за демон за аларма на KOrganizer
 GenericName[ca]=Client del dimoni d'alarma de KOrganizer
+GenericName[ca@valencia]=Client del dimoni d'alarma de KOrganizer
 GenericName[cs]=Klient démona přípomínek KOrganizeru
 GenericName[da]=KOrganizer-påmindelsesklient
 GenericName[de]=Hintergrund-Erinnerungsfunktion für KOrganizer
