--- a/korganizer.desktop
+++ b/korganizer.desktop
@@ -5,6 +5,7 @@ Comment[af]=Kalender en Skedulering Program
 Comment[ar]=برنامج التقويم والجدولة
 Comment[bg]=Програма за календар и разписание
 Comment[ca]=Un programa de calendari i planificació
+Comment[ca@valencia]=Un programa de calendari i planificació
 Comment[cs]=Kalendářový a plánovací program
 Comment[cy]=Rhaglen Galendr a Drefnlennu
 Comment[da]=Kalender- og planlægningsprogram
@@ -71,6 +72,7 @@ Name[ar]=برنامج المنظَم KOrganizer
 Name[bg]=KOrganizer
 Name[br]=KOrganizer
 Name[ca]=KOrganizer
+Name[ca@valencia]=KOrganizer
 Name[cs]=KOrganizer
 Name[cy]=KTrefnydd
 Name[da]=KOrganizer
@@ -129,6 +131,7 @@ GenericName[af]=Persoonlike Organiseerder
 GenericName[ar]=المنظم الشخصي
 GenericName[bg]=Организатор
 GenericName[ca]=Organitzador personal
+GenericName[ca@valencia]=Organitzador personal
 GenericName[cs]=Osobní organizér
 GenericName[cy]=Trefnydd Personol
 GenericName[da]=Personlig planlægningskalender
