--- a/plugins/hebrew/hebrew.desktop
+++ b/plugins/hebrew/hebrew.desktop
@@ -6,6 +6,7 @@ Name[ar]=ملحق التقويم اليهودي
 Name[bg]=Приставка за еврейския календар
 Name[br]=Lugent deiziadur yudev
 Name[ca]=Connector de calendari jueu
+Name[ca@valencia]=Connector de calendari jueu
 Name[cs]=Modul židovského kalendáře
 Name[da]=Jødisk kalender-plugin
 Name[de]=Modul für jüdischen Kalender
@@ -57,6 +58,7 @@ Comment=Shows all dates in KOrganizer also in the Jewish calendar system.
 Comment[ar]=اعرض الأيام في المنظم وايضا في نظام التقويم اليهودي.
 Comment[bg]=Приставката служи за показване на датите според еврейския календар.
 Comment[ca]=Mostra totes les dates en el KOrganizer també en el sistema del calendari jueu.
+Comment[ca@valencia]=Mostra totes les dates en el KOrganizer també en el sistema del calendari jueu.
 Comment[cs]=Zobrazení všech dat v KOrganizeru také v židovském kalendáři.
 Comment[da]=Viser alle datoer i KOrganizer - også i det jødiske kalendersystem.
 Comment[de]=Zeigt alle Daten in KOrganizer auch im jüdischen Kalendarium an.
