--- a/plugins/picoftheday/picoftheday.desktop
+++ b/plugins/picoftheday/picoftheday.desktop
@@ -4,6 +4,7 @@ Name=Wikipedia Picture Of the Day Plugin for Calendars
 Name[ar]=ملحق صورة ويكيبيديا لهذا اليوم للتقويمات
 Name[bg]=Приставка на календара за дати и смятане с дати
 Name[ca]=Connector d'imatge del dia de la Viquipèdia per als calendaris
+Name[ca@valencia]=Connector d'imatge del dia de la Viquipèdia per als calendaris
 Name[cs]=Wikipedia modul 'Obrázek dne' pro kalendáře
 Name[da]=Wikipedia dagens billede-plugin for kalendere
 Name[de]=Bild des Tages aus Wikipedia für den Kalender
@@ -43,6 +44,7 @@ Type=Service
 Comment=This plugin provides the Wikipedia Picture of the Day
 Comment[ar]=هذا الملحق يوفر صور لهذا اليوم من الويكيبيديا
 Comment[ca]=Aquest connector proporciona la imatge del dia de la Viquipèdia
+Comment[ca@valencia]=Este connector proporciona la imatge del dia de la Viquipèdia
 Comment[cs]=Wikipedia modul 'Obrázek dne'
 Comment[da]=Dette plugin viser Dagens billede fra Wikipedia
 Comment[de]=Dieses Modul stellt das Bild des Tages aus Wikipedia zur Verfügung.
