--- a/plugins/printing/list/listprint.desktop
+++ b/plugins/printing/list/listprint.desktop
@@ -5,6 +5,7 @@ Name[af]=Lys druk styl
 Name[ar]=قائمة نمط الطباعة
 Name[bg]=List Print Style
 Name[ca]=Estil d'impressió en llista
+Name[ca@valencia]=Estil d'impressió en llista
 Name[cs]=Styl deníku - seznam
 Name[da]=Listeudskriftsstil
 Name[de]=Listen-Druckstil
@@ -55,6 +56,7 @@ Comment[af]=Hierdie inprop module druk afsprake en te-doen items in lys vorm.
 Comment[ar]=هذا الملحق يتيح طباعة الأحداث و الواجِبات في شكل قائمة
 Comment[bg]=Приставката служи за печат на събитията и задачите в списъчна форма.
 Comment[ca]=Aquest connector permet imprimir esdeveniments i tasques pendents en forma de llista.
+Comment[ca@valencia]=Este connector permet imprimir esdeveniments i tasques pendents en forma de llista.
 Comment[cs]=tento modul umožňuje tisknout události a úlohy do seznamu.
 Comment[da]=Dette plugin gør at du kan udskrive begivenheder og opgaver på en liste.
 Comment[de]=Mit diesem Modul können Ereignisse und Aufgaben in Listenform ausgedruckt werden.
