--- a/plugins/printing/year/yearprint.desktop
+++ b/plugins/printing/year/yearprint.desktop
@@ -5,6 +5,7 @@ Name[af]=Druk styl: Jaarliks
 Name[ar]=نمط الطباعة السنوي
 Name[bg]=Yearly Print Style
 Name[ca]=Estil d'impressió anual
+Name[ca@valencia]=Estil d'impressió anual
 Name[cs]=Roční tiskový styl
 Name[da]=Yearly udskriftsstil
 Name[de]=Jahres-Druckstil
@@ -50,6 +51,7 @@ Comment[af]=Hierdie inprop module maak dit moontlik om 'n kalender vir 'n hele j
 Comment[ar]=هذا الملحق يتيح طباعة التقويم السنوي
 Comment[bg]=Приставката служи за печат на годишния календар.
 Comment[ca]=Aquest connector us permet imprimir un calendari anual.
+Comment[ca@valencia]=Este connector vos permet imprimir un calendari anual.
 Comment[cs]=Tento modul umožňuje tisk ročního kalendáře.
 Comment[da]=Dette plugin gør at du kan udskrive en årlig kalender
 Comment[de]=Mit diesem Modul können Jahresübersichten gedruckt werden.
