--- a/interfaces/korganizer/korganizerpart.desktop
+++ b/interfaces/korganizer/korganizerpart.desktop
@@ -2,6 +2,7 @@
 Name=KOrganizer Part Interface
 Name[ar]=واجهة جزء برنامج المنظم
 Name[ca]=Interfície de part del KOrganizer
+Name[ca@valencia]=Interfície de part del KOrganizer
 Name[cs]=Rozhraní komponenty KOrganizeru
 Name[da]=Grænseflade til KOrganizer Part
 Name[de]=KOrganizer-Komponenten-Schnittstelle
@@ -44,6 +45,7 @@ Comment[ar]=جزء برنامج المنظم
 Comment[bg]=Модул KOrganizer
 Comment[br]=Perzh KOrganizer
 Comment[ca]=Part de KOrganizer
+Comment[ca@valencia]=Part de KOrganizer
 Comment[cs]=KOrganizer Part
 Comment[cy]=KTrefnydd Part
 Comment[da]=KOrganizer Part
