--- a/kcmconfigs/korganizer_configcolorsandfonts.desktop
+++ b/kcmconfigs/korganizer_configcolorsandfonts.desktop
@@ -16,6 +16,7 @@ X-DocPath=korganizer/index.html#config-main-fonts
 Name=Colors and Fonts
 Name[ar]=الألوان و الخطوط
 Name[ca]=Colors i tipus de lletra
+Name[ca@valencia]=Colors i tipus de lletra
 Name[cs]=Barvy a písma
 Name[da]=Farver og skrifttyper
 Name[de]=Farben und Schriftarten
@@ -55,6 +56,7 @@ Name[zh_TW]=顏色與字型
 Comment=KOrganizer Colors and Fonts Configuration
 Comment[ar]=إعداد الألوان والخطوط لبرنامج المنظم 
 Comment[ca]=Configuració de colors i tipus de lletra del KOrganizer
+Comment[ca@valencia]=Configuració de colors i tipus de lletra del KOrganizer
 Comment[cs]=Nastavení barev a písem KOrganizeru
 Comment[da]=Konfiguration af farver og skrifttyper for KOrganizer
 Comment[de]=Farb- und Schriftdarstellung für KOrganizer
