--- a/kcmconfigs/korganizer_configtime.desktop
+++ b/kcmconfigs/korganizer_configtime.desktop
@@ -17,6 +17,7 @@ Name=Time and Date
 Name[ar]=الوقت و التاريخ
 Name[bg]=Дата и час
 Name[ca]=Hora i data
+Name[ca@valencia]=Hora i data
 Name[cs]=Datum a čas
 Name[da]=Tid og dato
 Name[de]=Zeit und Datum
@@ -58,6 +59,7 @@ Comment=KOrganizer Time and Date Configuration
 Comment[ar]= إعدادات الوقت و التاريخ لبرنامج المنظَم
 Comment[bg]=Настройване на дата и час за KOrganizer
 Comment[ca]=Configuració de la data i hora al KOrganizer
+Comment[ca@valencia]=Configuració de la data i hora al KOrganizer
 Comment[cs]=Nastavení data a času pro KOrganizer
 Comment[da]=Konfiguration af tid og dato for KOrganizer
 Comment[de]=KOrganizer-Einstellungen für Zeit/Datum
