--- a/korganizer_part.desktop
+++ b/korganizer_part.desktop
@@ -5,6 +5,7 @@ Comment[af]=Kalender en Skedulering Program
 Comment[ar]=برنامج التقويم والجدولة
 Comment[bg]=Програма за календар и разписание
 Comment[ca]=Un programa de calendari i planificació
+Comment[ca@valencia]=Un programa de calendari i planificació
 Comment[cs]=Kalendářový a plánovací program
 Comment[cy]=Rhaglen Galendr a Drefnlennu
 Comment[da]=Kalender- og planlægningsprogram
@@ -70,6 +71,7 @@ Name[ar]=برنامج المنظَم KOrganizer
 Name[bg]=KOrganizer
 Name[br]=KOrganizer
 Name[ca]=KOrganizer
+Name[ca@valencia]=KOrganizer
 Name[cs]=KOrganizer
 Name[cy]=KTrefnydd
 Name[da]=KOrganizer
