--- a/plugins/datenums/datenums.desktop
+++ b/plugins/datenums/datenums.desktop
@@ -5,6 +5,7 @@ Name[af]=Dag nommer inprop module vir kalenders
 Name[ar]=ملحق ارقام التاريخ للتقاويم
 Name[bg]=Приставка на календара за дати и смятане с дати
 Name[ca]=Connector de números de data per als calendaris
+Name[ca@valencia]=Connector de números de data per als calendaris
 Name[cs]=Modul pro očíslování dat v kalendáři
 Name[da]=Datonumre-plugin for kalendere
 Name[de]=Kalendertag-Modul für Kalender
@@ -56,6 +57,7 @@ Comment[af]=Die inprop module vertoon die dag nommer van die jaar bo aan die age
 Comment[ar]=ﻷي يوم هذا الملحق يعرض رقم اليوم من السنة في أعلى مستعرض جدول الأعمال. مثال ، 1 فبراير يكون اليوم 32 من السنة .
 Comment[bg]=Приставката служи за показване на деня от началото на годината. Примерно, 1-ви февруари е 32-ия ден от годината.
 Comment[ca]=Per cada dia, aquest connector mostra el número de dia de l'any al capdamunt de la vista d'agenda. Per exemple, 1 de Febrer és el dia 32 de l'any.
+Comment[ca@valencia]=Per cada dia, este connector mostra el número de dia de l'any al capdamunt de la vista d'agenda. Per exemple, 1 de Febrer és el dia 32 de l'any.
 Comment[cs]=tento modul pro každý den zobrazuje pořadí dne v roce na vrcholu pohledu. Např. 1. únor je 32 druhý den v roce.
 Comment[da]=For hver dag viser dette plugin nummeret for dagen i året for oven i agendavisningen. For eksempel er 1. februar 1 is den 32. dag i året.
 Comment[de]=Für jeden Tag des Jahres wird mit diesem Modul der Kalendertag oben in der Tagesansicht angezeigt. Der 1. Februar ist beispielsweise der 32. Kalendertag des Jahres.
