--- a/plugins/printing/journal/journalprint.desktop
+++ b/plugins/printing/journal/journalprint.desktop
@@ -5,6 +5,7 @@ Name[af]=Joernaal druk styl
 Name[ar]=نمط طباعة السّجل اليومي
 Name[bg]=Journal Print Style
 Name[ca]=Estil d'impressió del diari
+Name[ca@valencia]=Estil d'impressió del diari
 Name[cs]=Tiskový styl deníku
 Name[da]=Journal udskriftsstil
 Name[de]=Journal-Druckstil
@@ -55,6 +56,7 @@ Comment[af]=Hierdie inprop module maak dit moontlik om joernaal inskrywings (dag
 Comment[ar]=هذا الملحق يتيح طباعة إدخالات السّجل (مفكرات)
 Comment[bg]=Приставката служи за печат на дневника.
 Comment[ca]=Aquest connector us permet imprimir entrades del diari.
+Comment[ca@valencia]=Este connector vos permet imprimir entrades del diari.
 Comment[cs]=tento modul umožňuje tisk položek deníku.
 Comment[da]=Dette plugin gør at du kan udskrive journalindgange (dagbogsindgange).
 Comment[de]=Mit diesem Modul können Journaleinträge (Tagebucheinträge) gedruckt werden.
