--- a/plugins/thisdayinhistory/thisdayinhistory.desktop
+++ b/plugins/thisdayinhistory/thisdayinhistory.desktop
@@ -3,6 +3,7 @@ X-KDE-Library=korg_thisdayinhistory
 Name=Wikipedia 'This Day in History' Plugin
 Name[ar]=ملحق 'هذا اليوم في التاريخ' في الويكيبيديا
 Name[ca]=Connector d'imatge del dia de la Viquipèdia
+Name[ca@valencia]=Connector d'imatge del dia de la Viquipèdia
 Name[cs]=Wikipedia modul 'Tento den v historii'
 Name[da]=Wikipedias 'denne dag i historien'-plugin
 Name[de]=Wikipedia-Modul „Dieser Tag in der Geschichte“
@@ -40,6 +41,7 @@ Name[zh_TW]=維基百科「歷史上的今天」外掛程式
 Comment=This plugin provides links to Wikipedia's 'This Day in History' pages
 Comment[ar]=هذا الملحق يوفر وصلات لصفحات 'هذا اليوم في التاريخ' من الويكيبيديا
 Comment[ca]=Aquest connector proporciona els enllaços a les pàgines d'Efemèrides de la Viquipèdia
+Comment[ca@valencia]=Este connector proporciona els enllaços a les pàgines d'Efemèrides de la Viquipèdia
 Comment[da]=Dette plugin viser links til Wikipedias 'denne dag i historien'-sider
 Comment[de]=Dieses Modul stellt eine Verknüpfung auf „Dieser Tag in der Geschichte“ in Wikipedia zur Verfügung.
 Comment[el]=Αυτό το πρόσθετο προσφέρει δεσμούς στις σελίδες 'Αυτή η ημέρα στην Ιστορία' της Wikipedia
