Add KoGroupwareIntegration to activate no hassle integration with the Groupware class and the incidence editor in apps. Use it in KOrganizer and KMail.
For some reason it was sitting on my disks uncommitted, sorry about
that...

CCMAIL: vkrause@kde.org

svn path=/branches/work/akonadi-ports/kdepim/; revision=1075748

--- a/incidenceeditor/CMakeLists.txt
+++ b/incidenceeditor/CMakeLists.txt
@@ -26,6 +26,7 @@ set( korg_incidenceeditor_LIB_SRCS
     koeditorattachments.cpp
     koeditorfreebusy.cpp
     koattendeeeditor.cpp
+    kogroupwareintegration.cpp
     templatemanagementdialog.cpp
 )
 
