move the FreeBusyUrlDialog into the incidenceeditor as that's where it's needed. and it isn't used anyplace else AFAICT.
svn path=/trunk/KDE/kdepim/; revision=1079291

--- a/incidenceeditor/CMakeLists.txt
+++ b/incidenceeditor/CMakeLists.txt
@@ -27,6 +27,7 @@ set( korg_incidenceeditor_LIB_SRCS
     koeditorfreebusy.cpp
     koattendeeeditor.cpp
     kogroupwareintegration.cpp
+    freebusyurldialog.cpp
     templatemanagementdialog.cpp
 )
 
